# local-buddy

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
agent/: __init__.py  __main__.py  checkpoint.py  config.py  llm.py  loop.py  repl.py  state.py
agent/memory/: __init__.py  embeddings.py  ingest.py  search.py  store.py
agent/tools/: __init__.py  approval.py  base.py  filesystem.py  memory.py  shell.py  webfetch.py
